# Staroll

./: .gitignore  Cargo.toml  README.md
.anvil/: state.json
client/: go.mod  wails.json
contracts/: StateVerifier.sol  issuer.sol
sequencer/: Cargo.toml  build.rs  config.json
sequencer/proto/: sequencer.proto
sequencer/src/: batcher.rs  config.rs  main.rs
sequencer/src/batcher/: batcher.rs  signer.rs
sequencer/src/crypto/: merkle.rs  mod.rs  secp256k1.rs
sequencer/src/internal/models/: models.rs
